syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.javatecharc.demo.proto";
option java_outer_classname = "HelloWorldProto";
option optimize_for = SPEED;

service HelloWorld {
    rpc helloJavaTechArc (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}